--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"license": "UNLICENSED",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"connect": "^3.7.0",
 		"cookie-parser": "^1.4.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
